--- a/section12/src/index.css
+++ b/section12/src/index.css
@@ -18,6 +18,7 @@ html, body {
 
     /* <color> | <offset-x> | <offset-y> | <blur-radius> | <spread-radius> */
     box-shadow: rgba(100, 100, 100, 0.2) 0px 0px 29px 0px;
+    padding: 0px 20px;
 }
 
 body * {
